@@ -5,6 +5,12 @@
 
 ### Solvers
 
+- Global:
+
+  - output event value are not explictly computed but constructed by
+  interpolation to avoid time step instabilities. Time interpolated fields are
+  also used for CSV outputs.
+
 - groundwaterFoam
 
   - pressure head equation can be solved using Newton algorithm to handle
